fix(dashscope):convert to image request/response bug